fixed up the spacing of calendar

--- a/frontend/css/scrolling-nav.css
+++ b/frontend/css/scrolling-nav.css
@@ -72,7 +72,8 @@ body {font-family: Verdana, sans-serif;}
   list-style-type: none;
   display: inline-block;
   width: 13.6%;
-  text-align: center;
+  vertical-align: top;
+  text-align: left;
   margin-bottom: 30px;
   font-size:12px;
   color: #777;
